# lectern

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  SUITE.md  install.sh  pyproject.toml
docs/: README.md  assignment-authoring.md  canvas-grades-workflow.md  gradescope-workflow.md  grading-types.md  lab-digest-grader-prompt.md  recon-report-workflow.md
lectern/: _text.py  classroom_seed.py  digest_emit.py  digest_merge.py  digest_rubric.py  digest_schema.py  drive_auth.py  exam_build.py  exam_pack.py  exam_serial.py  exam_verify.py  feedback_deliver.py  feedback_log.py  feedback_note.py  feedback_sanitize.py  github_bind.py  gradebook.py  gradebook_build.py  gradebook_ledger.py  gradescope_stats.py  isa_publish.py  isa_publish_schema.py  lab_digest.py  lab_report.py  lms_grades.py  lms_roster.py  manifest_schema.py  qbank.py  recon.py  recon_autograde.py  recon_bundle.py  recon_discover.py  recon_docs.py  recon_git.py  recon_links.py  recon_manifest.py  recon_record.py  report_charts.py  report_manifest.py  report_recommend.py  (+18 more)
references/: reference_exam.tex
templates/: feedback-log.md  feedback.md  instructor-report.md  recon-report.md  spellbreaker.report.yaml  spellbreaker.rubric.yaml
tests/: conftest.py  test_classroom_seed.py  test_digest_emit.py  test_digest_merge.py  test_digest_rubric.py  test_digest_schema.py  test_digest_student_comment.py  test_drive_auth.py  test_exam_build.py  test_exam_pack.py  test_exam_serial.py  test_exam_verify.py  test_feedback_deliver.py  test_feedback_log.py  test_feedback_note.py  test_feedback_sanitize.py  test_github_bind.py  test_gradebook.py  test_isa_publish.py  (+41 more)
(+100 files in other folders)
