[project]
name = "lectern"
version = "0.1.0"
description = "Course/teaching operations skill (the Registrar) — terms, gradebooks, exams, ISA, archives"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6", "jsonschema>=4"]

[project.optional-dependencies]
# reg-exam-verify reads the footer serial via pdfplumber; without it the code
# falls back to the `pdftotext` CLI (poppler-utils), so this is optional at runtime.
verify = ["pdfplumber>=0.11"]
dev = ["pytest>=8.0", "pytest-mock>=3.12", "responses>=0.24", "pdfplumber>=0.11"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lectern*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so test modules can cross-import shared fixtures
# via `from tests.test_x import ...` under bare `pytest` (CI), not only `python -m pytest`.
pythonpath = ["."]
markers = [
    "suite: cross-component LMS-suite integration tests (opt-in: pytest -m suite)",
]
